# houdini-graph-extractor

./: .gitignore  CLAUDE.md  EXTRACTION_PHASES.md  README.md  houdini-graph-extractor-spec.md  pyproject.toml  test_openrouter.json
data/: intent_library.json
src/: __init__.py  config.py  main.py
src/analysis/: __init__.py  harmonizer.py  llm_transcript_analyzer.py  transcript_parser.py  validator.py  visual_extractor.py
src/analysis/intent_mapping/: __init__.py  mapper.py  models.py
src/analysis/pattern_mining/: __init__.py  analyzer.py  models.py  schema_enricher.py
src/ingestion/: __init__.py  frame_extractor.py  youtube.py
src/ingestion/help_docs/: __init__.py  corpus.py  models.py  parser.py
src/ingestion/labs_hda/: __init__.py  _hython_extract.py  extractor.py  models.py
src/ingestion/node_schema/: __init__.py  _hython_extract.py  extractor.py  models.py
src/output/: __init__.py  hou_data.py  hougraph_ir_export.py
src/state/: __init__.py  graph_state.py  merger.py  models.py
tests/: test_help_corpus.py  test_help_parser.py  test_hougraph_ir_export.py  test_intent_mapping.py  test_labs_hda.py  test_node_schema.py  test_pattern_mining.py  test_validator.py
tests/fixtures/: sample_patterns.json  test_output.json  test_params.json
tests/fixtures/help_docs/: box_sop.txt  include_type.txt  math_chop.txt  noise_vop.txt  ropfetch_top.txt  scatter_sop.txt
tests/fixtures/labs_hda/: sample_graphs.json
tests/fixtures/node_schema/: sample_schema.json
